update width in goal

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             Keeping these problems in my mind I tried to build this project.
          </p>
          <br>
-         <img src="images/new3.jpg" width="250px" width="100px" alt="">
+         <img src="images/new3.jpg" width="250px" alt="">
     </div>
     
     <br>
